[           Legend:          ]
[ + Added feature            ]
[ * Improved/changed feature ]
[ - Bug fixed (we hope)      ]
[ ! Attention (Notes)        ]
[ M Maintenance              ]
[ dates are dd/mm/yyyy !!!   ]

ChangeLog:
 v0.9.2:
 * 03/09/06:[-] Fixed MFIFO issue where VIF/GIF might not be ready
			[*] Improved Guitar Hero fix, seems MFIFO isnt too keen on sliced transfers (especially on GIF)
			[*] Modified VS2005 Project file so it compiles - Thanks to CKemu for doing that :P
			(Refraction - CKemu)

 * 02/09/06:[*] Various changes in cdvd.c. Most notable is the implementation of cdvd.PwOff.
			It is actualy INTR_STAT and has "completition" bits that are Ack'ed by cdvdman interrupt handler.
			...to be continued.
			(Florin)

 * 30/09/06:[*] Corrected performance counter register reads on COP0 (3 regs are accessed by 1) - Lego Racers 2
			[-] Altered the order DIV on IOP rec handles signs - Lego Racers 2
			(Refraction)

 * 29/09/06:[-] Fixed condition where MFIFO could get ahead of itself/not have enough data available
				(fixes Guitar Hero)
			[-] Fixed up DMA Stalls between VIF/IPU/GIF, games such as Theme Park World should work properly now.
			[+] Added cpu detection for Dual core Opterons, Athlon X2's and Intel Core 2 Duo's (no perf effect)
			[+] Added saqibs sound changes so ADMA and ADPCM streams work.
			[-] Yes, more counter fixes, fed up of these :P
			[-] DMA transfers fixed when a QWC is already given, it transfers the QWC then ends (Fixes Ridge Racer 5 a bit)
			[-] Small GSCSR changes, not sure what will be fixed.
			[-] Event where the DMA could be terminated during a stall on VIF
			[-] Various Rec + MTGS + IPU Fixes
			(Refraction - Saqib - ZeroFrog)
			
 * 25/07/06:[-] Changed Vif0 COL/ROW mem write addresses, they were going to the same QW
			[*] Made Vif stalls use cycles to delay, due to the spiderman fix we dont want these interrupting instantly!
				(fixes Flatout BIFCO)