@@ -8,12 +8,16 @@
 
 ChangeLog:
  v0.9.2:
- * 03/09/06:[-] Fixed MFIFO issue where VIF/GIF might not be ready
+ * 05/10/06:[-] Fixed VIF Unpack skipping write cycle counting (Fixes XMen 2 amongst other SPS)
+			[-] Small counter change, am i ever going to get peace from these :(
+				(Refraction)
+				
+ * 03/10/06:[-] Fixed MFIFO issue where VIF/GIF might not be ready
 			[*] Improved Guitar Hero fix, seems MFIFO isnt too keen on sliced transfers (especially on GIF)
 			[*] Modified VS2005 Project file so it compiles - Thanks to CKemu for doing that :P
 			(Refraction - CKemu)
 
- * 02/09/06:[*] Various changes in cdvd.c. Most notable is the implementation of cdvd.PwOff.
+ * 02/10/06:[*] Various changes in cdvd.c. Most notable is the implementation of cdvd.PwOff.
 			It is actualy INTR_STAT and has "completition" bits that are Ack'ed by cdvdman interrupt handler.
 			...to be continued.
 			(Florin)
